// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`random should chain deep sequences correctly 1`] = `"kQBOkY_QdYHnIzZ64gX91WUiNMwl1cG6Bw41Qz1mj5YEzAlg"`;

exports[`random should chain deep sequences correctly 2`] = `"kQDyAlT-y1CSItLqwQpZIugg2FjA44hie8gHmhnhnKg3-XtO"`;

exports[`random should chain deep sequences correctly 3`] = `"kQCrbYuBNKCLCt9djALpBhYY7a02T13eEngbe_aOD-JnjOo5"`;

exports[`random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQBOkY_QdYHnIzZ64gX91WUiNMwl1cG6Bw41Qz1mj5YEzAlg",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 15359n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBOkY_QdYHnIzZ64gX91WUiNMwl1cG6Bw41Qz1mj5YEzAlg",
            "to": "kQDyAlT-y1CSItLqwQpZIugg2FjA44hie8gHmhnhnKg3-XtO",
            "type": "internal",
            "value": "9.972736",
          },
        ],
      },
    ],
  },
]
`;

exports[`random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBOkY_QdYHnIzZ64gX91WUiNMwl1cG6Bw41Qz1mj5YEzAlg",
          "to": "kQDyAlT-y1CSItLqwQpZIugg2FjA44hie8gHmhnhnKg3-XtO",
          "type": "internal",
          "value": "9.972736",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13880n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDyAlT-y1CSItLqwQpZIugg2FjA44hie8gHmhnhnKg3-XtO",
            "to": "kQCrbYuBNKCLCt9djALpBhYY7a02T13eEngbe_aOD-JnjOo5",
            "type": "internal",
            "value": "9.950458",
          },
        ],
      },
    ],
  },
]
`;

exports[`random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDyAlT-y1CSItLqwQpZIugg2FjA44hie8gHmhnhnKg3-XtO",
          "to": "kQCrbYuBNKCLCt9djALpBhYY7a02T13eEngbe_aOD-JnjOo5",
          "type": "internal",
          "value": "9.950458",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13808n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQCrbYuBNKCLCt9djALpBhYY7a02T13eEngbe_aOD-JnjOo5",
            "to": "kQCrbYuBNKCLCt9djALpBhYY7a02T13eEngbe_aOD-JnjOo5",
            "type": "internal",
            "value": "9.92844",
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQCrbYuBNKCLCt9djALpBhYY7a02T13eEngbe_aOD-JnjOo5",
          "to": "kQCrbYuBNKCLCt9djALpBhYY7a02T13eEngbe_aOD-JnjOo5",
          "type": "internal",
          "value": "9.92844",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4360n,
      },
    ],
  },
]
`;
